--- a/JSF/Roomies/WebContent/index.xhtml
+++ b/JSF/Roomies/WebContent/index.xhtml
@@ -27,8 +27,8 @@
 				<p:graphicImage styleClass="logo" value="/resources/images/logo.png"></p:graphicImage>
 				<br/><br/>
 				<pm:field>
-					<p:inputText></p:inputText>
-					<p:inputText></p:inputText>
+					<p:inputText placeholder="Correo"></p:inputText>
+					<p:password placeholder="Contraseña" ></p:password>
 					<p:commandButton value="iniciar" action="#{login.log}" ajax="false"></p:commandButton>
 					<p:commandButton value="registrar" ></p:commandButton>
 				</pm:field>
