--- a/JSF/Roomies/WebContent/index.xhtml
+++ b/JSF/Roomies/WebContent/index.xhtml
@@ -29,10 +29,9 @@
 				<pm:field>
 					<p:inputText placeholder="Correo"></p:inputText>
 					<p:password placeholder="Contraseña" ></p:password>
-					<p:commandButton value="iniciar" action="#{login.log}" ajax="false"></p:commandButton>
+					<p:commandButton style="width: 30vw" value="iniciar" action="#{login.log}" ajax="false"></p:commandButton>
 					<p:commandButton value="registrar" ></p:commandButton>
 				</pm:field>
-				
 			</h:form>
 		</pm:content>
 	</pm:page>
