--- a/JSF/Roomies/WebContent/pages/main.xhtml
+++ b/JSF/Roomies/WebContent/pages/main.xhtml
@@ -14,7 +14,13 @@
 <h:head>
 
 </h:head>
-
+<f:facet name="postinit">
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+	<h:outputStylesheet library="css" name="styles.css" />
+	<h:outputStylesheet library="css" name="custom-theme.css" />
+	<h:outputStylesheet library="css" name="jquery.mobile.icons.min.css" />
+	<h:outputScript library="js" name="scripts.js" />
+</f:facet>
 <h:body>
 	<pm:page id="first">
 		<pm:header title="Page 1"></pm:header>
