--- a/JSF/Roomies/WebContent/pages/register.xhtml
+++ b/JSF/Roomies/WebContent/pages/register.xhtml
@@ -10,7 +10,7 @@
 	xmlns:pm="http://primefaces.org/mobile">
 
 <f:view renderKitId="PRIMEFACES_MOBILE" />
-<c:set var="login" value="#{Context.loginBean}"></c:set>
+<c:set var="reg" value="#{Context.registerBean}"></c:set>
 <h:head>
 
 </h:head>
@@ -37,7 +37,7 @@
 				</div>
 				
 				<div id="buttonsDiv"> 
-					<p:commandButton value="Regresar" style="float: left;width: 49%;margin-right: 2%;" styleClass="ui-btn ui-btn-line"></p:commandButton>
+					<p:commandButton value="Regresar" action="#{reg.goBack}" style="float: left;width: 49%;margin-right: 2%;" styleClass="ui-btn ui-btn-line"></p:commandButton>
 					<p:commandButton value="Aceptar" style="float:left;width: 49%;" styleClass="ui-btn ui-btn-line"></p:commandButton>
 				</div>
 
