--- a/JSF/Roomies/WebContent/pages/register.xhtml
+++ b/JSF/Roomies/WebContent/pages/register.xhtml
@@ -30,15 +30,15 @@
 				<h1>Registro</h1>
 				<br></br><br></br>
 				<div id="inputTexts">
-					<p:inputText placeholder="Nombre"></p:inputText>
-					<p:inputText placeholder="Correo"></p:inputText>
-					<p:password placeholder="Contraseña"></p:password>
-					<p:password placeholder="Confirmar contraseña"></p:password>
+					<p:inputText placeholder="Nombre" value="#{reg.name}"></p:inputText>
+					<p:inputText placeholder="Correo" value="#{reg.email}"></p:inputText>
+					<p:password placeholder="Contraseña" value="#{reg.password}"></p:password>
+					<p:password placeholder="Confirmar contraseña" value="#{reg.passwordConfirm}"></p:password>
 				</div>
 				
 				<div id="buttonsDiv"> 
 					<p:commandButton value="Regresar" action="#{reg.goBack}" style="float: left;width: 49%;margin-right: 2%;" styleClass="ui-btn ui-btn-line"></p:commandButton>
-					<p:commandButton value="Aceptar" style="float:left;width: 49%;" styleClass="ui-btn ui-btn-line"></p:commandButton>
+					<p:commandButton value="Aceptar" action="#{reg.registerUser}" style="float:left;width: 49%;" styleClass="ui-btn ui-btn-line"></p:commandButton>
 				</div>
 
 			</h:form>
