--- a/JSF/Roomies/WebContent/pages/main.xhtml
+++ b/JSF/Roomies/WebContent/pages/main.xhtml
@@ -28,8 +28,7 @@
 			<h:form>
 				<h:outputText id="textUser" value="#{main.user}"></h:outputText>
 				<p:commandButton value="boton" action="#{main.goSecond}" ajax="false"></p:commandButton>
-				<p:commandButton value="set nombre" action="#{main.getValue}">
-					<p:ajax update="textUser"></p:ajax>
+				<p:commandButton value="set nombre" action="#{main.getValue}" update="textUser">
 				</p:commandButton>
 			</h:form>
 		</pm:content>
