--- a/JSF/Roomies/WebContent/pages/register.xhtml
+++ b/JSF/Roomies/WebContent/pages/register.xhtml
@@ -27,6 +27,7 @@
 	<pm:page id="register">
 		<pm:content>
 			<h:form>
+				<p:growl id="growl" showDetail="true" />
 				<h1 class="header">Registro</h1>
 				<br></br><br></br>
 				<div id="inputTexts">
