Se agregaron mensajes de error a la pagina de registro

--- a/JSF/Roomies/WebContent/pages/main.xhtml
+++ b/JSF/Roomies/WebContent/pages/main.xhtml
@@ -27,8 +27,7 @@
 		<pm:content>
 			<h:form>
 				<p:commandButton value="boton" action="#{main.goSecond}" ajax="false"></p:commandButton>
-				<p:commandButton value="set nombre" action="#{main.getValue}">
-				</p:commandButton>
+				<p:commandButton value="set nombre" action="#{main.getValue}"></p:commandButton>
 			</h:form>
 		</pm:content>
 	</pm:page>
