se valido el registro y el inicio de sesion

--- a/JSF/Roomies/WebContent/index.xhtml
+++ b/JSF/Roomies/WebContent/index.xhtml
@@ -28,6 +28,7 @@
 	<pm:page id="login">
 		<pm:content>
 			<h:form>
+				<p:growl id="growl" showDetail="true" />
 				<br />
 				<br />
 				<p:graphicImage styleClass="logo" value="/resources/images/logo.png"></p:graphicImage>
