--- a/JSF/Roomies/WebContent/pages/main.xhtml
+++ b/JSF/Roomies/WebContent/pages/main.xhtml
@@ -15,7 +15,8 @@
 
 </h:head>
 <f:facet name="postinit">
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+	<link rel="stylesheet"
+		href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 	<h:outputStylesheet library="css" name="styles.css" />
 	<h:outputStylesheet library="css" name="custom-theme.css" />
 	<h:outputStylesheet library="css" name="jquery.mobile.icons.min.css" />
@@ -23,11 +24,21 @@
 </f:facet>
 <h:body>
 	<pm:page id="first">
-		<pm:header title="Page 1"></pm:header>
-		<pm:content>
+		<pm:header styleClass="head">
+			<h:panelGroup id="gridProfile" style="margin-left:auto;margin-right:auto;display:in-line">
+				<p:graphicImage styleClass="profile-icon"
+					value="/resources/images/profile_pic-02.png"></p:graphicImage>
+				<p:graphicImage styleClass="profile-icon"
+					value="/resources/images/profile_pic-02.png"></p:graphicImage>
+				<p:graphicImage styleClass="profile-icon"
+					value="/resources/images/profile_pic-02.png"></p:graphicImage>
+				<p:graphicImage styleClass="profile-icon"
+					value="/resources/images/profile_pic-02.png"></p:graphicImage>
+			</h:panelGroup>
+		</pm:header>
+		<pm:content style="background: gray;" styleClass="content">
 			<h:form>
-				<p:commandButton value="boton" action="#{main.goSecond}" ajax="false"></p:commandButton>
-				<p:commandButton value="set nombre" action="#{main.getValue}"></p:commandButton>
+				
 			</h:form>
 		</pm:content>
 	</pm:page>
@@ -40,6 +51,6 @@
 			<p:button href="/pages/main.xhtml#first" value="Go Back" />
 		</pm:content>
 	</pm:page>
- 
-    </h:body>
+
+</h:body>
 </html>
