--- a/JSF/Roomies/WebContent/pages/register.xhtml
+++ b/JSF/Roomies/WebContent/pages/register.xhtml
@@ -31,7 +31,7 @@
 				<h1 class="header">Registro</h1>
 				<br></br>
 				<br></br>
-				<h:panelGrid style="width:100%" id="grid" columns="2" cellpadding="5">
+				<h:panelGrid style="width:100%" id="grid" columns="2">
 					<p:inputText id="name" value="#{reg.name}" label="nombre" placeholder="Nombre" required="true" />
 					<p:message for="name" display="icon"/>
 
