--- a/JSF/Roomies/WebContent/pages/house.xhtml
+++ b/JSF/Roomies/WebContent/pages/house.xhtml
@@ -33,17 +33,10 @@
 					<br></br>
 					<p:inputText placeholder="Direccion" style="width:80%;margin-left:auto;margin-right:auto;"></p:inputText>
 					<p:inputText placeholder="Telefono" style="width:80%;margin-left:auto;margin-right:auto;"></p:inputText>
+					<br />
+					<button>boton</button>
 				</div>
 			</h:form>
-		</pm:content>
-	</pm:page>
-
-	<pm:page id="second">
-		<pm:header title="Page 2"></pm:header>
-
-		<pm:content>
-			<p>Page 2 content.</p>
-			<p:button href="/pages/main.xhtml#first" value="Go Back" />
 		</pm:content>
 	</pm:page>
 
